# github_pm

./: .pre-commit-config.yaml  README.md  run-local.sh
.cursor/rules/: backend-python-deps.md  unit-testing.md
.github/workflows/: ci.yml
backend/: .env-sample  .env_sample  backend.containerfile  pyproject.toml
backend/sample_json/: issues.json  labels.json  milestones.json
backend/src/github_pm/: api.py  app.py  auth.py  cli.py  context.py  logger.py
backend/tests/: conftest.py  test_api.py  test_app.py  test_cli.py  test_context.py
frontend/: .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  icon.css  main.jsx
frontend/src/components/: CommentCard.jsx  CommentCard.test.jsx  IssueCard.jsx  IssueCard.test.jsx  LoginButton.jsx  ManageLabels.jsx  ManageMilestones.jsx  ManageSort.jsx  MilestoneCard.jsx  MilestoneCard.test.jsx  Reactions.jsx  UserAvatar.jsx  UserProfile.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/services/: api.js  api.test.js
frontend/src/test/: setup.js
frontend/src/utils/: assigneesCache.js  dateUtils.js  dateUtils.test.js  labelsCache.js  milestonesCache.js
