[project]
name = "github-pm"
version = "0.0.1"
description = "GitHub Project Management"
authors = [{ name = "David Butenhof", email = "dbutenho@redhat.com" }]
keywords = ["github", "project", "management"]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "fastapi[all]>=0.123.9",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.12.0",
    "pygithub>=2.8.1",
    "uvicorn>=0.38.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3.16",
]

[project.urls]
Homepage = "https://github.com/dbutenhof/github-pm"
Repository = "https://github.com/dbutenhof/github-pm"
Issues = "https://github.com/dbutenhof/github-pm/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"github_pm.data" = ["*.gz"]
"github_pm.benchmark.scenarios" = ["*.json", "**/*.json"]

[project.scripts]
github_pm = "github_pm.cli:main"

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "flake8>=7.3.0",
    "httpx>=0.27.0",
    "isort>=6.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "tox>=4.23.2",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_first_party = ["github_pm"]
multi_line_output = 3
force_sort_within_sections = true
order_by_type = false

[tool.tox]
requires = ["tox>=4.23.2"]
env_list = ["format", "isort", "lint", "test", "coverage"]

[tool.tox.env.format]
description = "check code format"
skip_install = true
deps = ["black"]
commands = [["black", "--check", { replace = "posargs", default = ["src", "tests"], extend = true}]]

[tool.tox.env.isort]
description = "check order of imports"
skip_install = true
deps = ["isort"]
commands = [["isort", "--check", { replace = "posargs", default = ["src", "tests"], extend = true}]]

[tool.tox.env.lint]
description = "check code"
skip_install = true
deps = ["flake8"]
commands = [["flake8", { replace = "posargs", default = ["src", "tests"], extend = true}]]

[tool.tox.env.test]
description = "run tests"
deps = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true}]]

[tool.tox.env.coverage]
description = "run tests with coverage"
deps = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "httpx>=0.27.0"]
commands = [
    ["pytest", "--cov=github_pm", "--cov-report=term-missing", "--cov-report=html", { replace = "posargs", default = ["tests"], extend = true}],
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abstractproperty",
    "if False:",
    "if 0:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
